<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.disciplinaapp.ResultActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/final_result"
        android:textSize="30dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_discipline1"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_discipline_result"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_avg1"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_avg_result"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_situation1"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_situation_result"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_discipline2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_discipline_result"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_avg2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_avg_result"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_situation2"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_situation_result"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_final_avg"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_avg_result"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_final_situation"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/final_situation"
            android:layout_weight="1"
            />
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        />


</LinearLayout>
